fixed some errors in index and postlist page

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
 
     <div class="postButtons">
-        <button class="middleBtn">All Posts</button>
+        <button class="middleBtn" onclick="window.location='/scribbler project/Scribbler-project/html/postslist.html'" >All Posts</button>
         <button class="middleBtn" data-bs-toggle="modal" data-bs-target="#exampleModalCreate">Create Post</button>
 
     </div>
