--- a/html/postslist.html
+++ b/html/postslist.html
@@ -12,15 +12,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Marck+Script&family=Satisfy&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
-        crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Montez|Roboto|Ubuntu+Mono&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"
         type="text/css" media="screen" />
-        <link rel="stylesheet" href="../scribbler project/Scribbler-project/CSS/common.css">
+        <link rel="stylesheet" href="../CSS/common.css">
         <link rel="stylesheet" href="../CSS/postlist.css">
 </head>
 
@@ -134,7 +132,7 @@
                 <div>
                     <div class="post-body-heading">
                     <span class="post-heading-content" id="heading1">‘let’ me be a ‘const’(ant), not a ‘var’(iable)!</span>
-                    <span class="trash-button" >
+                    <span class="trash-button" data-bs-toggle="modal" data-bs-target="#modalConfirmYesNo1">
                         <!-- TODO: Include Font Awesome icon for delete icon here -->
                         <i class="fa fa-trash fa-lg"></i>
                     </span>
@@ -146,7 +144,32 @@
                     <i style="font-size:24px" class="fa">&#xf141;</i>
                 </span>
             </div>
+            <!--Delete pot model-->
+
+            <div id="modalConfirmYesNo1" class="modal fade">
+                <div class="modal-dialog ">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h4 id="lblTitleConfirmYesNo" class="modal-title">
+                                Are you sure you want to delete this post?</h4>
+
+                        </div>
+
+                        <div class="modal-footer">
+                            <button id="btnYesConfirm" type="button" class="btn-btn-success" data-dismiss="modal"
+                                onclick="removeCard('card1')">Yes</button>
+                            <button id="btnNoConfirmYesNo" type="button" class="btn-btn-danger"
+                                data-dismiss="modal">No</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </div>
+            <!--Delete post model ends here-->
+        
+
+            
         <!-- post 1 ends here -->
 
         <!-- post 2 starts here -->
@@ -255,6 +278,15 @@
 
     </div>
     <!-- list of all posts ends here -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>    
 </body>
 
 </html>
